# apploja

./: .dockerignore  .env.example  .gitignore  DEPLOY_RAILWAY.md  Dockerfile  README.md  _catalog_extracted.txt  alembic.ini  docker-compose.yml  linkedin_transicao_gabriel.md  package-lock.json  package.json  pyproject.toml  tsconfig.tsbuildinfo
_local_postgres/data/: postgresql.conf  postmaster.opts  postmaster.pid
admin/: Dockerfile  package.json  tsconfig.tsbuildinfo
alembic/: env.py
alembic/versions/: 20260411_0001_create_users_table.py  20260411_0002_create_catalog_tables.py  20260411_0003_create_cart_tables.py  20260411_0004_create_shipping_rules_table.py  20260411_0005_create_addresses_orders_tables.py  20260411_0006_create_payments_tables.py  20260411_0007_phase7_operational_audit.py  20260412_0008_shipping_distance_radius.py
app/: __init__.py  main.py
app/core/: config.py  database.py  dependencies.py  exceptions.py  logging.py  security.py
app/models/: __init__.py  address.py  audit_log.py  base.py  cart.py  cart_item.py  category.py  enums.py  order.py  order_item.py  order_status_history.py  payment.py  product.py  product_item.py  shipping.py  stock_movement.py  user.py
scripts/: import_wm_catalog_pdf.py  seed_local_users.py  start_api.sh  start_local_postgres.ps1  stop_local_postgres.ps1
storefront/: .dockerignore  .env.example  Dockerfile  next.config.ts  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
tests/: conftest.py  test_cart.py  test_catalog.py  test_orders.py  test_payments.py  test_phase7_operations.py  test_shipping.py
(+659 files in other folders)
