[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wm-distribuidora-backend"
version = "0.1.0"
description = "Backend base para o sistema de e-commerce WM Distribuidora."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.32,<1.0",
  "sqlalchemy>=2.0,<3.0",
  "alembic>=1.14,<2.0",
  "asyncpg>=0.30,<1.0",
  "psycopg[binary]>=3.2,<4.0",
  "pydantic>=2.10,<3.0",
  "pydantic-settings>=2.6,<3.0",
  "python-jose[cryptography]>=3.3,<4.0",
  "passlib[bcrypt]>=1.7,<2.0",
  "bcrypt<4.1",
  "email-validator>=2.2,<3.0",
  "python-multipart>=0.0.20,<1.0",
  "httpx>=0.28,<1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9.0",
  "pytest-asyncio>=0.24,<1.0",
  "ruff>=0.8,<1.0",
  "aiosqlite>=0.20,<1.0",
  "pypdf>=6.0,<7.0",
  "pillow>=12.2,<13.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
